--- a/success.css
+++ b/success.css
@@ -21,7 +21,7 @@
   
     height: 100%;
     width: 100%;
-    background-color:  #E94B3CFF;
+    background-color:  #EF8075;
     color: white;
     
 }
@@ -64,7 +64,7 @@
 {
     background: white;
     border: none;
-    color: #E94B3CFF;
+    color: #EF8075;
     border-radius: 6px;
     padding: 1rem 2rem;
 }
